// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task generator generates correct files with JavaScript 1`] = `
"import { BaseTask } from '@checkup/core';

export default class MyFooTask extends BaseTask {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = 'foo';
  group = 'bar';


  async run() {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates correct files with JavaScript 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates correct files with JavaScript 3`] = `
"import { Hook } from '@oclif/config';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName } from '@checkup/core';

const hook = async function({ context, tasks }) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
};

export default hook;
"
`;

exports[`task generator generates correct files with TypeScript for defaults 1`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyFooTask extends BaseTask implements Task {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = '';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates correct files with TypeScript for defaults 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates correct files with TypeScript for defaults 3`] = `
"import { Hook } from '@oclif/config';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName, RegisterTaskArgs } from '@checkup/core';

const hook: Hook<RegisterTaskArgs> = async function({ context, tasks }: RegisterTaskArgs) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
};

export default hook;
"
`;

exports[`task generator generates correct files with TypeScript for defaults in custom path 1`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyFooTask extends BaseTask implements Task {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = '';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates correct files with TypeScript for defaults in custom path 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates correct files with TypeScript for defaults in custom path 3`] = `
"import { Hook } from '@oclif/config';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName, RegisterTaskArgs } from '@checkup/core';

const hook: Hook<RegisterTaskArgs> = async function({ context, tasks }: RegisterTaskArgs) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
};

export default hook;
"
`;

exports[`task generator generates correct files with category 1`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyFooTask extends BaseTask implements Task {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = 'foo';
  group = 'bar';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates correct files with category 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates correct files with category 3`] = `
"import { Hook } from '@oclif/config';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName, RegisterTaskArgs } from '@checkup/core';

const hook: Hook<RegisterTaskArgs> = async function({ context, tasks }: RegisterTaskArgs) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
};

export default hook;
"
`;

exports[`task generator generates correct files with group 1`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyFooTask extends BaseTask implements Task {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = 'foo';
  group = 'bar';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates correct files with group 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates correct files with group 3`] = `
"import { Hook } from '@oclif/config';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName, RegisterTaskArgs } from '@checkup/core';

const hook: Hook<RegisterTaskArgs> = async function({ context, tasks }: RegisterTaskArgs) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
};

export default hook;
"
`;

exports[`task generator generates correct files with typescript 1`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyFooTask extends BaseTask implements Task {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = 'foo';
  group = 'bar';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates correct files with typescript 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates correct files with typescript 3`] = `
"import { Hook } from '@oclif/config';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName, RegisterTaskArgs } from '@checkup/core';

const hook: Hook<RegisterTaskArgs> = async function({ context, tasks }: RegisterTaskArgs) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
};

export default hook;
"
`;

exports[`task generator generates multiple correct files with TypeScript for defaults 1`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyFooTask extends BaseTask implements Task {
  taskName = 'my-foo';
  taskDisplayName = 'My Foo';
  category = '';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates multiple correct files with TypeScript for defaults 2`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyFooTask from '../src/tasks/my-foo-task';

describe('my-foo-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyFooTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates multiple correct files with TypeScript for defaults 3`] = `
"import { BaseTask, Task } from '@checkup/core';
import { Result } from 'sarif';

export default class MyBarTask extends BaseTask implements Task {
  taskName = 'my-bar';
  taskDisplayName = 'My Bar';
  category = '';

  async run(): Promise<Result[]> {
    return this.appendCheckupProperties([]);
  }
}
"
`;

exports[`task generator generates multiple correct files with TypeScript for defaults 4`] = `
"import { CheckupProject, stdout, getTaskContext } from '@checkup/test-helpers';
import { getPluginName } from '@checkup/core';
import MyBarTask from '../src/tasks/my-bar-task';

describe('my-bar-task', () => {
  let project: CheckupProject;
  let pluginName = getPluginName(__dirname);

  beforeEach(() => {
    project = new CheckupProject('checkup-app', '0.0.0', project => {
      project.addDependency('ember-cli', '^3.15.0');
    });

    project.writeSync();
    project.gitInit();
  });

  afterEach(() => {
    project.dispose();
  });

  it('can read task as JSON', async () => {
    const result = await new MyBarTask(pluginName, getTaskContext({},  {cwd: project.baseDir})).run();

    expect(result).toMatchSnapshot();
  });
});
"
`;

exports[`task generator generates multiple correct files with TypeScript for defaults 5`] = `
"import { Hook } from '@oclif/config';
import MyBarTask from '../tasks/my-bar-task';
import MyFooTask from '../tasks/my-foo-task';
import { getPluginName, RegisterTaskArgs } from '@checkup/core';

const hook: Hook<RegisterTaskArgs> = async function({ context, tasks }: RegisterTaskArgs) {
  let pluginName = getPluginName(__dirname);
  tasks.registerTask(new MyFooTask(pluginName, context));
  tasks.registerTask(new MyBarTask(pluginName, context));
};

export default hook;
"
`;
